--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@lifeomic/axios-fetch": "^3.0.1",
     "axios": "^1.3.2",
     "gsap": "^3.11.4",
+    "plop": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1"
