--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@lifeomic/axios-fetch": "^3.0.1",
     "axios": "^1.3.2",
     "gsap": "^3.11.4",
+    "lodash": "^4.17.21",
     "plop": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,6 +37,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/axios": "^0.14.0",
     "@types/gsap": "^3.0.0",
+    "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
