--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ethersphere/bee-js": "^5.1.2",
     "@lifeomic/axios-fetch": "^3.0.1",
     "axios": "^1.3.2",
+    "change-case": "^4.1.2",
     "gsap": "^3.11.4",
     "lodash": "^4.17.21",
     "plop": "^3.1.2",
@@ -36,6 +37,7 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "@types/axios": "^0.14.0",
+    "@types/change-case": "^2.3.1",
     "@types/gsap": "^3.0.0",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.27",
