--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@ethersphere/bee-js": "^5.2.0",
     "@lifeomic/axios-fetch": "^3.0.1",
+    "@snapshot-labs/lock": "github:snapshot-labs/lock",
     "axios": "^1.3.2",
     "change-case": "^4.1.2",
     "gsap": "^3.11.4",
