--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
-    "storybook": "^6.5.16"
+    "storybook": "^6.5.16",
+    "zustand": "^4.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
