--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@snapshot-labs/lock": "github:snapshot-labs/lock",
     "axios": "^1.3.2",
     "change-case": "^4.1.2",
+    "formik": "^2.2.9",
     "gsap": "^3.11.4",
     "lodash": "^4.17.21",
     "plop": "^3.1.2",
@@ -27,6 +28,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "storybook": "^6.5.16",
+    "yup": "^1.0.2",
     "zustand": "^4.3.5"
   },
   "devDependencies": {
@@ -44,6 +46,7 @@
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
