--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.6",
-    "typescript": "*",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2",
     "vite": "^4.1.0"
   }
 }
