--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@snapshot-labs/lock": "github:snapshot-labs/lock",
     "axios": "^1.3.2",
     "change-case": "^4.1.2",
+    "firebase": "9.18.0",
     "formik": "^2.2.9",
     "gsap": "^3.11.4",
     "lodash": "^4.17.21",
