--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "storybook": "^6.5.16",
+    "uid": "^2.0.2",
     "web3": "^1.9.0",
     "yup": "^1.0.2",
     "zustand": "^4.3.5"
