--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,7 +2,7 @@
   "parser": "typescript",
   "printWidth": 80,
   "tabWidth": 2,
-  "semi": true,
+  "semi": false,
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "singleQuote": true,
