--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@ethersphere/bee-js": "^5.2.0",
     "@lifeomic/axios-fetch": "^3.0.1",
     "@snapshot-labs/lock": "github:snapshot-labs/lock",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tanstack/react-query": "^4.29.5",
     "axios": "^1.3.2",
     "change-case": "^4.1.2",
     "classnames": "^2.3.2",
@@ -31,8 +33,9 @@
     "react-router-dom": "^6.8.1",
     "storybook": "^6.5.16",
     "uid": "^2.0.2",
+    "uuid": "^9.0.0",
     "web3": "^1.9.0",
-    "yup": "^1.0.2",
+    "yup": "^1.1.1",
     "zustand": "^4.3.5"
   },
   "devDependencies": {
@@ -41,18 +44,20 @@
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.4.2",
+    "@storybook/builder-vite": "^7.0.7",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "@types/axios": "^0.14.0",
     "@types/change-case": "^2.3.1",
     "@types/gsap": "^3.0.0",
     "@types/lodash": "^4.14.191",
+    "@types/node": "^18.16.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.1",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
     "eslint": "^8.0.1",
@@ -70,6 +75,6 @@
     "tailwindcss": "^3.2.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
-    "vite": "^4.1.0"
+    "vite": "^4.3.2"
   }
 }
