--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/uuidv4": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
@@ -24,10 +27,12 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
     "flowbite-svelte": "^0.44.15",
+    "mdsvex": "^0.11.0",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
+    "sass": "^1.67.0",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "tailwindcss": "^3.3.2",
@@ -38,6 +43,7 @@
   "type": "module",
   "dependencies": {
     "@ethersphere/bee-js": "^6.4.0",
+    "snarkdown": "^2.0.0",
     "svelte-markdown": "^0.4.0",
     "uuidv4": "^6.2.13",
     "vitest": "^0.34.4",
