--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@ethersphere/bee-js": "^6.4.0",
     "@sveltejs/adapter-node": "^1.3.1",
+    "redis": "^4.6.10",
     "snarkdown": "^2.0.0",
     "svelte-markdown": "^0.4.0",
     "uuidv4": "^6.2.13",
