--- a/package.json
+++ b/package.json
@@ -14,53 +14,53 @@
 		"test:watch": "vitest --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"@tailwindcss/forms": "^0.5.6",
-		"@tailwindcss/line-clamp": "^0.4.4",
-		"@tailwindcss/typography": "^0.5.10",
+		"@sveltejs/adapter-auto": "2.0.0",
+		"@sveltejs/kit": "1.20.4",
+		"@tailwindcss/forms": "0.5.6",
+		"@tailwindcss/line-clamp": "0.4.4",
+		"@tailwindcss/typography": "0.5.10",
 		"@types/jsonwebtoken": "9.0.5",
 		"@types/lodash.set": "4.3.9",
-		"@types/uuidv4": "^5.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"flowbite-svelte": "^0.44.15",
-		"mdsvex": "^0.11.0",
-		"postcss": "^8.4.24",
-		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
-		"sass": "^1.67.0",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tailwindcss": "^3.3.2",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"@types/uuidv4": "5.0.0",
+		"@typescript-eslint/eslint-plugin": "5.45.0",
+		"@typescript-eslint/parser": "5.45.0",
+		"autoprefixer": "10.4.14",
+		"eslint": "8.28.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-plugin-svelte": "2.30.0",
+		"flowbite-svelte": "0.44.15",
+		"mdsvex": "0.11.0",
+		"postcss": "8.4.24",
+		"postcss-load-config": "4.0.1",
+		"prettier": "2.8.0",
+		"prettier-plugin-svelte": "2.10.1",
+		"sass": "1.67.0",
+		"svelte": "4.0.5",
+		"svelte-check": "3.4.3",
+		"tailwindcss": "3.3.2",
+		"tslib": "2.4.1",
+		"typescript": "5.3.3",
+		"vite": "4.4.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@ethersphere/bee-js": "6.4.0",
-		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/adapter-node": "1.3.1",
 		"@wagmi/core": "1.4.10",
-		"@web3modal/siwe": "^3.5.0-alpha.1",
-		"@web3modal/wagmi": "^3.5.0-alpha.1",
+		"@web3modal/siwe": "3.5.0-alpha.1",
+		"@web3modal/wagmi": "3.5.0-alpha.1",
 		"ethers": "6.9.0",
 		"jsonwebtoken": "9.0.2",
-		"lodash.set": "^4.3.2",
-		"redis": "^4.6.10",
+		"lodash.set": "4.3.2",
+		"redis": "4.6.10",
 		"siwe": "2.1.4",
-		"snarkdown": "^2.0.0",
-		"svelte-markdown": "^0.4.0",
-		"svelte-wagmi": "^0.4.1",
-		"uuidv4": "^6.2.13",
+		"snarkdown": "2.0.0",
+		"svelte-markdown": "0.4.0",
+		"svelte-wagmi": "0.4.1",
+		"uuidv4": "6.2.13",
 		"viem": "1.19.11",
-		"vitest": "^0.34.4",
-		"wagmi": "^1.4.10",
-		"zod": "^3.22.2"
+		"vitest": "0.34.4",
+		"wagmi": "1.4.10",
+		"zod": "3.22.2"
 	}
 }
