--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"postinstall": "patch-package"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "2.0.0",
-		"@sveltejs/kit": "1.20.4",
+		"@sveltejs/adapter-auto": "3.1.1",
+		"@sveltejs/kit": "2.5.0",
 		"@tailwindcss/forms": "0.5.6",
 		"@tailwindcss/line-clamp": "0.4.4",
 		"@tailwindcss/typography": "0.5.10",
@@ -37,20 +37,20 @@
 		"prettier-plugin-svelte": "2.10.1",
 		"sass": "1.67.0",
 		"svelte": "4.0.5",
-		"svelte-check": "3.4.3",
+		"svelte-check": "3.6.0",
 		"tailwindcss": "3.3.2",
 		"tslib": "2.4.1",
 		"typescript": "5.3.3",
-		"vite": "4.4.2"
+		"vite": "5.0.12"
 	},
 	"type": "module",
 	"dependencies": {
 		"@ethersphere/bee-js": "6.4.0",
 		"@sveltejs/adapter-node": "1.3.1",
 		"@sveltejs/adapter-vercel": "3.1.0",
-		"@wagmi/core": "1.4.10",
-		"@web3modal/siwe": "3.5.0-alpha.1",
-		"@web3modal/wagmi": "3.5.0-alpha.1",
+		"@wagmi/core": "2.8.0",
+		"@web3modal/siwe": "4.1.11",
+		"@web3modal/wagmi": "4.1.11",
 		"ethers": "6.9.0",
 		"flowbite-svelte-icons": "0.4.5",
 		"jsonwebtoken": "9.0.2",
@@ -62,7 +62,7 @@
 		"svelte-markdown": "0.4.0",
 		"svelte-wagmi": "0.4.1",
 		"uuidv4": "6.2.13",
-		"viem": "1.19.11",
+		"viem": "2.9.29",
 		"vitest": "0.34.4",
 		"wagmi": "1.4.10",
 		"zod": "3.22.2"
