--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
 		"@ethersphere/bee-js": "6.4.0",
 		"@sveltejs/adapter-node": "1.3.1",
 		"@sveltejs/adapter-vercel": "3.1.0",
-		"@wagmi/core": "2.8.0",
-		"@web3modal/siwe": "4.1.11",
-		"@web3modal/wagmi": "4.1.11",
+		"@wagmi/core": "1.4.10",
+		"@web3modal/siwe": "3.5.0-alpha.1",
+		"@web3modal/wagmi": "3.5.0-alpha.1",
 		"ethers": "6.9.0",
 		"flowbite-svelte-icons": "0.4.5",
 		"jsonwebtoken": "9.0.2",
@@ -62,9 +62,9 @@
 		"svelte-markdown": "0.4.0",
 		"svelte-wagmi": "0.4.1",
 		"uuidv4": "6.2.13",
-		"viem": "2.9.29",
+		"viem": "1.19.11",
 		"vitest": "0.34.4",
-		"wagmi": "2.8.0",
+		"wagmi": "1.4.10",
 		"zod": "3.22.2"
 	}
 }
