--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"jsonwebtoken": "9.0.2",
 		"lodash.set": "4.3.2",
 		"patch-package": "^8.0.0",
+		"pinata-web3": "0.4.1",
 		"redis": "4.6.10",
 		"siwe": "2.1.4",
 		"snarkdown": "2.0.0",
